Updates from Overleaf

--- a/relatorio/sbc-template.tex
+++ b/relatorio/sbc-template.tex
@@ -24,6 +24,8 @@ Otavio Lourenço da Silva & 13201812292 & otavio.silva\inst{1}
 \maketitle
 
 \input{capitulos/resumo.tex}
+\input{capitulos/intro.tex}
+\input{capitulos/metodologia.tex}
 
 
 \bibliographystyle{template/sbc}
