--- a/relatorio/capitulos/metodologia.tex
+++ b/relatorio/capitulos/metodologia.tex
@@ -1,1 +1,8 @@
 \section{Metodologia}
+
+A metodologia escolhida para a aplicação consiste num modelo mvc (Model view controler), onde cada camada será responsável por uma função, sendo as views tudo que diz respeito a interação com usuário, ou o questionário de sintomas. As controlers serão responsáveis pela comunicação com os dados sobre doenças e pela aplicação de lógica sobre os sintomas apresentados pelo usuário, também como quem devolverá os possíveis passos para prevenção e tratamento para o diagnóstico, nunca deixando de reforçar a necessidade de buscar ajuda profissional.
+Por fim, as models serão as entidades que representarão os dados usado pela aplicação, ou seja, as doenças, sintomas, tratamentos e talvez algum dado ainda não previsto. Ainda fará, através de classes repositórios, a persistência dos dados no banco e consultas ao mesmo.
+
+
+
+
