Adicionada a metodologia a aplicação areferência, Guia de doenças e sintomas

--- a/relatorio/capitulos/metodologia.tex
+++ b/relatorio/capitulos/metodologia.tex
@@ -4,5 +4,6 @@ A metodologia escolhida para a aplicação consiste num modelo mvc (Model view c
 Por fim, as models serão as entidades que representarão os dados usado pela aplicação, ou seja, as doenças, sintomas, tratamentos e talvez algum dado ainda não previsto. Ainda fará, através de classes repositórios, a persistência dos dados no banco e consultas ao mesmo.
 
 
+Temos como referência de aplicação, o Einstein - Guia de Doenças e sintomas \cite{https://www.einstein.br/guia-doencas-sintomas}, Tanto como possível base de dados a ser compilados, quanto em como levar o questionário para o usuário. Por outro lado, também ilustra o cenário cujo não desejamos ser vítimas, o de receber uma lista assustadora de doenças relacionadas ao seus sintomas, tais como câncer ou insuficiência renal, quando estão ligadas ao caso por poucos sintomas, 1 ou 2.
 
 
