Updates from Overleaf

--- a/relatorio/sbc-template.bib
+++ b/relatorio/sbc-template.bib
@@ -21,3 +21,11 @@
     year   = "2018",
     url    = "https://www.metropoles.com/vida-e-estilo/bem-estar/saude-bem-estar/esta-tudo-na-cabeca-entenda-como-funcionam-as-doencas-psicossomaticas"
 }
+
+@manual {AlbertEinstein,
+    author       = "HIAE",
+    title        = "Guia de Doenças e Sintomas",
+    year         = "2016",
+    organization = "Instituto Israelita de Ensino e Pesquisa Albert Einstein",
+    url          = "https://www.einstein.br/guia-doencas-sintomas"
+}
