--- a/relatorio/capitulos/metodologia.tex
+++ b/relatorio/capitulos/metodologia.tex
@@ -1,9 +1,14 @@
 \section{Metodologia}
 
-A metodologia escolhida para a aplicação consiste num modelo mvc (Model view controler), onde cada camada será responsável por uma função, sendo as views tudo que diz respeito a interação com usuário, ou o questionário de sintomas. As controlers serão responsáveis pela comunicação com os dados sobre doenças e pela aplicação de lógica sobre os sintomas apresentados pelo usuário, também como quem devolverá os possíveis passos para prevenção e tratamento para o diagnóstico, nunca deixando de reforçar a necessidade de buscar ajuda profissional.
-Por fim, as models serão as entidades que representarão os dados usado pela aplicação, ou seja, as doenças, sintomas, tratamentos e talvez algum dado ainda não previsto. Ainda fará, através de classes repositórios, a persistência dos dados no banco e consultas ao mesmo.
+A metodologia escolhida para a aplicação consiste num modelo \emph{Model View Controler} (MVC), onde cada camada será responsável por uma função, sendo estas:
+\begin{itemize}
+    \item \emph{Views}: tudo que diz respeito a interação com usuário, ou o questionário de sintomas.
+    \item \emph{Controlers}: serão responsáveis pela comunicação com os dados sobre doenças e pela aplicação de lógica sobre os sintomas apresentados pelo usuário, também como quem devolverá os possíveis passos para prevenção e tratamento para o diagnóstico, nunca deixando de reforçar a necessidade de buscar ajuda profissional.
+    \item \emph{Models}: serão as entidades que representarão os dados usado pela aplicação, ou seja, as doenças, sintomas, tratamentos e talvez algum dado ainda não previsto. Ainda fará, através de classes repositórios, a persistência dos dados no banco e consultas ao mesmo.
+\end{itemize}
 
 
-Temos como referência de aplicação, o Einstein - Guia de Doenças e sintomas \cite{https://www.einstein.br/guia-doencas-sintomas}, Tanto como possível base de dados a ser compilados, quanto em como levar o questionário para o usuário. Por outro lado, também ilustra o cenário cujo não desejamos ser vítimas, o de receber uma lista assustadora de doenças relacionadas ao seus sintomas, tais como câncer ou insuficiência renal, quando estão ligadas ao caso por poucos sintomas, 1 ou 2.
+Temos como referência de aplicação o Guia de Doenças e Sintomas \cite{alberteinstein}, tanto como possível base de dados a ser compilados, quanto em como forma de levar o questionário ao usuário.
+Por outro lado, também ilustra o cenário cujo não desejamos ser vítimas, o de receber uma lista assustadora de doenças relacionadas ao seus sintomas, tais como câncer ou insuficiência renal, quando estão ligadas ao caso por poucos sintomas.
 
 
