--- a/relatorio/capitulos/avaliacao.tex
+++ b/relatorio/capitulos/avaliacao.tex
@@ -1,5 +1,6 @@
 \subsection{Avaliação e conjunto de dados}
 
-A avaliação da aplicação será feita com casos de teste, escolhendo-se doenças e inserindo respostas relacionadas ao sintomas da mesma, não deixando de conferir casos excepsionais, ou  em outras palavras, casos em que o usuário possa estar com sintomas divergentes.
-Podem haver testes com usuários, no cenário ideal teriamos pacientes respondendo as questões e validaríamos o diagnóstico com médicos capacitados.
+Avaliação: A avaliação da aplicação seria feita de forma ideal recebendo respostas de um paciente e validando o diagnóstico com um médico capacitado. Embora seja possível mensurar a efetividade com casos de teste, se escolhem doenças e inserindo respostas relacionadas ao sintomas da mesma, não deixando de conferir casos excepsionais, ou  em outras palavras, casos em que o usuário possa estar com sintomas divergentes.
+Podem haver testes com usuários voluntários e até opiniões médicas.
+
 
