--- a/relatorio/capitulos/metodologia.tex
+++ b/relatorio/capitulos/metodologia.tex
@@ -23,3 +23,9 @@ Sempre lembrando que essa avaliação de qual diagnóstico adotar, será baseada
 Por fim, teremos o front, ou a interface vista pelo usuário. Será estruturada como um quiz, que apresentará questões de sim ou não para os sintomas, até que cominará no diagnóstico possível.
 
 
+\subsection{Avaliação e conjunto de dados}
+
+Avaliação: A avaliação da aplicação seria feita de forma ideal recebendo respostas de um paciente e validando o diagnóstico com um médico capacitado. Embora seja possível mensurar a efetividade com casos de teste, se escolhem doenças e inserindo respostas relacionadas ao sintomas da mesma, não deixando de conferir casos excepsionais, ou  em outras palavras, casos em que o usuário possa estar com sintomas divergentes.
+Podem haver testes com usuários voluntários e até opiniões médicas.
+
+
