Updates from Overleaf

--- a/relatorio/capitulos/resumo.tex
+++ b/relatorio/capitulos/resumo.tex
@@ -9,6 +9,6 @@
 \begin{resumo} 
   Atualmente no contexto nacional somente cerca de 30\% da população conta com um plano de saúde particular \cite{brunobocchini2018}, e muitas vezes, cerca de 40\% dos casos, o paciente brasileiro prefere fazer um autodiagnóstico baseado em informações retiradas da internet, que pode ser danoso à sua saúde \cite{vanessathees2018}.
   No presente trabalho é proposto um sistema online para diagnósticos simples, através de um linguajar menos técnico, e sempre deixando claro que procurar um médico antes de se automedicar é altamente recomendado.
-  As bases de dados mais encontradas online trabalham com organização top down, listando doenças e descrevendo seu sintomas, fazendo até que o paciente desenvolva os demais sintomas da doença de forma psicossomática \cite{julianacontaifer&isabellacavalcante2018}.
+  As bases de dados mais encontradas online trabalham com organização top down, listando doenças e descrevendo seu sintomas, fazendo até que o paciente desenvolva os demais sintomas da doença de forma psicossomática \cite{contaifercavalcante2018}.
   O diferencial desta proposta é a utilização de uma abordagem bottom up, obtendo e cruzando dados, através de questões a respeito de hábitos e sintomas do paciente, utilizando como amparo sistema de auxílio à tomada de decisão.
 \end{resumo}
