--- a/relatorio/sbc-template.bib
+++ b/relatorio/sbc-template.bib
@@ -14,7 +14,7 @@
     url    = "https://pebmed.com.br/40-dos-pacientes-fazem-autodiagnostico-e-automedicacao-pela-internet/"
 }
 
-@misc {julianacontaifer&isabellacavalcante2018,
+@misc {contaifercavalcante2018,
     author = "Juliana Contaifer and Isabella Cavalcante",
     title  = "Está tudo na cabeça. Entenda como funcionam as doenças psicossomáticas",
     month  = "apr",
@@ -28,4 +28,14 @@
     year         = "2016",
     organization = "Instituto Israelita de Ensino e Pesquisa Albert Einstein",
     url          = "https://www.einstein.br/guia-doencas-sintomas"
+}
+
+@book{longo2011harrison,
+  title={Harrison's Principles of Internal Medicine, 18th Edition},
+  author={Longo, D. and Fauci, A. and Kasper, D. and Hauser, S. and Jameson, J. and Loscalzo, J.},
+  isbn={9780071748896},
+  lccn={2008053547},
+  url={https://books.google.com.br/books?id=LBXRxwEACAAJ},
+  year={2011},
+  publisher={Mcgraw-hill}
 }
