--- a/relatorio/capitulos/metodologia.tex
+++ b/relatorio/capitulos/metodologia.tex
@@ -1,31 +1,47 @@
 \section{Metodologia}
 
-A metodologia escolhida para a aplicação consiste num modelo \emph{Model View Controler} (MVC), onde cada camada será responsável por uma função, sendo estas:
+\subsection{Componentes}
+
+A metodologia escolhida para a aplicação consiste num modelo \emph{Model View Controller} (MVC), onde cada camada será responsável por uma função, sendo estas:
 \begin{itemize}
     \item \emph{Views}: tudo que diz respeito a interação com usuário, ou o questionário de sintomas.
-    \item \emph{Controlers}: serão responsáveis pela comunicação com os dados sobre doenças e pela aplicação de lógica sobre os sintomas apresentados pelo usuário, também como quem devolverá os possíveis passos para prevenção e tratamento para o diagnóstico, nunca deixando de reforçar a necessidade de buscar ajuda profissional.
+    \item \emph{Controllers}: serão responsáveis pela comunicação com os dados sobre doenças e pela aplicação de lógica sobre os sintomas apresentados pelo usuário, também como quem devolverá os possíveis passos para prevenção e tratamento para o diagnóstico, nunca deixando de reforçar a necessidade de buscar ajuda profissional.
     \item \emph{Models}: serão as entidades que representarão os dados usado pela aplicação, ou seja, as doenças, sintomas, tratamentos e talvez algum dado ainda não previsto. Ainda fará, através de classes repositórios, a persistência dos dados no banco e consultas ao mesmo.
 \end{itemize}
 
+Tais camadas sendo devidamente encapsulada e fazendo a comunicação com as outras de forma segura e sem interferir no contexto.
 
-Temos como referência de aplicação o Guia de Doenças e Sintomas \cite{alberteinstein}, tanto como possível base de dados a ser compilados, quanto em como forma de levar o questionário ao usuário.
-Por outro lado, também ilustra o cenário cujo não desejamos ser vítimas, o de receber uma lista assustadora de doenças relacionadas ao seus sintomas, tais como câncer ou insuficiência renal, quando estão ligadas ao caso por poucos sintomas.
+\subsubsection{Views}
 
+Também definido como \emph{front}, ou a interface vista pelo usuário. Será estruturada como um quiz, que apresentará questões booleanas, de verdadeiro ou falso, a respeito dos sintomas do paciente.
+As informações obtidas neste formulário serão enviadas para a camada \emph{Controllers}.
 
-Como citado antes, a estrutura da aplicação terá 3 camadas, cada uma sendo devidamente encapsulada e fazendo a comunicação com a outra de forma segura e sem interferir no contexto.
+\subsubsection{Controllers}
 
-Iniciando pelo banco de dados, consistirá em  doenças e seus tratamentos e sintomas relacionados as mesmas, sendo que pretendemos definir um valor de probabilidade para esse relacionamento, para que tenha o papel de índice de tomada de decisão para o quão provável   que o usuário tenha a doença baseado neste número. Como esse ÍNDICE DE INCIDÊNCIA será calculado ainda não está claro.
+Aqui ocorre a interação do banco com as informações fornecidas pelo usuário, ou seja, questões simples sobre os sintomas registrados no banco serão enviadas para o \emph{front}, em seguida, a resposta voltará para a \emph{controller}.
 
-Em seguida vem a camada de controlers, onde teremos a interação do banco com as informações fornecidas pelo usuário, ou seja, questões simples sobre os sintomas registrados no banco serão enviadas para o front, a resposta voltará para a controler e baseado nisso, iremos montar um mapeamento, excluindo as doenças que não incluem as afirmativas de sintomas e incluindo as que sim, até que cheguemos numa possível resposta, devolvendo para o usuário o diagnóstico e como prevenir e tratar.
-Sempre lembrando que essa avaliação de qual diagnóstico adotar, será baseada nesse índice de incidência que está em desenvolvimento e avaliação para melhor aproveitamento.
+Baseado nisso, será realizado um mapeamento, excluindo doença que não incluem os sintomas indicados e incluindo as demais, até que o sistema aponte uma possível resposta, devolvendo para o usuário o diagnóstico, uma possível prevenção e alguma forma de tratamento.
+Sempre lembrando que a avaliação de qual diagnóstico adotar será baseada num índice de incidência que está em desenvolvimento e avaliação para melhor aproveitamento, citado na subseção \ref{ssec:models}.
 
+\subsubsection{Models}\label{ssec:models}
 
-Por fim, teremos o front, ou a interface vista pelo usuário. Será estruturada como um quiz, que apresentará questões de sim ou não para os sintomas, até que cominará no diagnóstico possível.
+Consiste no banco de dados, relacionando doenças a seus sintomas e alguns possíveis tratamentos.
+Pretendemos definir um valor de probabilidade para esse relacionamento, para que tenha o papel de índice de tomada de decisão para a probabilidade do usuário apresentar a doença em questão baseado neste número.
+Ainda não temos plena certeza de como calcular este valor de incidência, porém algumas bibliografias apresentam dados relevantes\cite{AlbertEinstein, longo2011harrison}.
 
+\subsection{Opções similares}
+
+Temos como referência de aplicação o Guia de Doenças e Sintomas \cite{AlbertEinstein}, tanto como possível base de dados a ser compilados, quanto em como forma de levar o questionário ao usuário.
+
+Apresentando informações completas, é uma excelente ferramenta para sua proposta.
+Por outro lado, também ilustra o cenário que desejamos evitar, quando o usuário recebe uma lista assustadora de doenças relacionadas ao seus sintomas, tais como câncer ou insuficiência renal, quando estão ligadas ao caso por poucos sintomas.
 
 \subsection{Avaliação e conjunto de dados}
 
 Avaliação: A avaliação da aplicação seria feita de forma ideal recebendo respostas de um paciente e validando o diagnóstico com um médico capacitado. Embora seja possível mensurar a efetividade com casos de teste, se escolhem doenças e inserindo respostas relacionadas ao sintomas da mesma, não deixando de conferir casos excepsionais, ou  em outras palavras, casos em que o usuário possa estar com sintomas divergentes.
 Podem haver testes com usuários voluntários e até opiniões médicas.
 
+\subsection{Complementação}
 
+Respondendo aos questionamentos deixados pelo professor, não utilizaremos sistemas de análise de linguagem natural, já que a entrada do usuário será booleana, como sim ou não.
+Não encontramos nenhum módulo disponível para este sistema, mas com uma análise estatística é possível criar uma base com margem de acerto aceeitável.
