Updates from Overleaf

--- a/relatorio/capitulos/metodologia.tex
+++ b/relatorio/capitulos/metodologia.tex
@@ -11,6 +11,13 @@ A metodologia escolhida para a aplicação consiste num modelo \emph{Model View 
 
 Tais camadas sendo devidamente encapsulada e fazendo a comunicação com as outras de forma segura e sem interferir no contexto.
 
+\begin{figure}
+    \centering
+    \input{relatorio/images/diagrama_blocos}
+    \caption{Diagrama de blocos do sistema.}
+    \label{fig:my_label}
+\end{figure}
+
 \subsubsection{Views}
 
 Também definido como \emph{front}, ou a interface vista pelo usuário. Será estruturada como um quiz, que apresentará questões booleanas, de verdadeiro ou falso, a respeito dos sintomas do paciente.
