--- a/relatorio/capitulos/metodologia.tex
+++ b/relatorio/capitulos/metodologia.tex
@@ -13,7 +13,7 @@ Tais camadas sendo devidamente encapsulada e fazendo a comunicação com as outr
 
 \begin{figure}
     \centering
-    \input{relatorio/images/diagrama_blocos}
+    \input{images/diagrama_blocos}
     \caption{Diagrama de blocos do sistema.}
     \label{fig:my_label}
 \end{figure}
