--- a/relatorio/sbc-template.tex
+++ b/relatorio/sbc-template.tex
@@ -31,4 +31,8 @@ Otavio Lourenço da Silva & 13201812292 & otavio.silva\inst{1}
 \bibliographystyle{template/sbc}
 \bibliography{sbc-template}
 
+\appendix
+
+\input{appendices/storyboard.tex}
+
 \end{document}
