--- a/relatorio/capitulos/intro.tex
+++ b/relatorio/capitulos/intro.tex
@@ -1,8 +1,8 @@
 \section{Introdução}
 
- Com o crescimento de informação e dados presentes na internet, houve um efeito esponencial na quantidade de aplicações/sites diressionados para praticamente qualquer conteúdo.
-;. Ainda que possa-se dizer que a boa parte destes, são direcionados para diversão e interações sociais, existem movimentos com o objetivo de facilitar e tranquilizar a quantidade esmagadora de usuários. Dentre esses, estão aqueles que se propositam a atividades como: Compras essenciais e de materiais supérfulos, compra de medicamentos e  diagnóstico médico...
-Sendo este último o foco deste trabalho.
-Diagnósticos feitos por pesquisas simples em buscadores disponíveis hoje, em sua grande parte, nos atenta para doenças extremamente sérias, como câncer, embora os cintomas apresentados pelo usuário não tenham sido tão preoculpantes.
-Isto, pode nos levar para um quadro tão preoculpante quanto, que seria o auto-diagnóstico baseado nestes resultados críticos, e um desenvolvimento de uma doença psicossomática, onde o paciente tem total certeza de que contêm a infermidade apontada.
-O objetivo deste, é explorar a relação de cintomas e doenças, lançando mão de um estudo estatístico, baseado na frequên frequência em que se relacionam, ainda, cruzando essas informações com o perfil do paciente, para que o diagnóstico seja o mais acertivo possível, e não alarmante sem encessidade... ainda que sempre lembraremos, um diagnóstico proficional é imprencindível
+Com o crescimento de informação e dados presentes na internet, houve um efeito exponencial na quantidade de aplicações/sites direcionados para praticamente qualquer conteúdo.
+Ainda que possa-se dizer que a boa parte destes são direcionados para diversão e interações sociais, existem movimentos com o objetivo de facilitar e tranquilizar a quantidade esmagadora de usuários. Dentre esses, estão aqueles que se propositam a atividades como: compras essenciais e de materiais supérfluos, compra de medicamentos e  diagnóstico médico, sendo este último o foco deste trabalho.
+
+Diagnósticos feitos por pesquisas simples em buscadores disponíveis hoje, em sua grande parte, nos atenta para doenças extremamente sérias, como câncer, embora os sintomas apresentados pelo usuário não tenham sido tão preocupantes.
+Isto, pode nos levar para um quadro tão preocupante quanto, que seria o auto-diagnóstico baseado nestes resultados críticos, e um desenvolvimento de uma doença psicossomática, onde o paciente tem total certeza de que contêm a enfermidade apontada.
+O objetivo deste, é explorar a relação de sintomas e doenças, lançando mão de um estudo estatístico, baseado na frequência em que se relacionam, ainda, cruzando essas informações com o perfil do paciente, para que o diagnóstico seja o mais assertivo possível, e não alarmante sem necessidade... ainda que sempre lembraremos, um diagnóstico profissional é imprescindível.
