--- a/relatorio/sbc-template.tex
+++ b/relatorio/sbc-template.tex
@@ -15,7 +15,7 @@
 
 \author{
 Heitor Rodrigues Savegnago & 11077415 & heitor.rodrigues\inst{1}\\
-Leopoldo Kenji Sugata Naves & 11201722022 & sugata.kenji\inst{1}\\
+Matheus Prudencio dos Santos & 11114014 & sugata.kenji\inst{1}\\
 Otavio Lourenço da Silva & 13201812292 & otavio.silva\inst{1}
 }
 
