--- a/relatorio/appendices/lofi.tex
+++ b/relatorio/appendices/lofi.tex
@@ -1,4 +1,4 @@
-\section{Prototipação de Baixa Fidelidade}
+\section{Prototipação de Baixa Fidelidade}\label{apdx:lofi}
 
 \subsection{Cenário Textual}
 
