--- a/relatorio/sbc-template.tex
+++ b/relatorio/sbc-template.tex
@@ -5,9 +5,12 @@
 \usepackage[utf8]{inputenc}
 \usepackage[brazil]{babel}
 % \usepackage[latin1]{inputenc}  
+\usepackage[T1]{fontenc} 
 
 \usepackage{subcaption}
 \usepackage{tikz}
+
+\usepackage{hyperref}
      
 \sloppy
 
@@ -34,6 +37,7 @@ Otavio Lourenço da Silva & 13201812292 & otavio.silva\inst{1}
 
 \appendix
 
-\input{appendices/storyboard.tex}
+\input{appendices/lofi.tex}
+\input{appendices/mdfi.tex}
 
 \end{document}
