--- a/relatorio/capitulos/intro.tex
+++ b/relatorio/capitulos/intro.tex
@@ -5,4 +5,17 @@ Ainda que possa-se dizer que a boa parte destes são direcionados para diversão
 
 Diagnósticos feitos por pesquisas simples em buscadores disponíveis hoje, em sua grande parte, nos atenta para doenças extremamente sérias, como câncer, embora os sintomas apresentados pelo usuário não tenham sido tão preocupantes.
 Isto, pode nos levar para um quadro tão preocupante quanto, que seria o auto-diagnóstico baseado nestes resultados críticos, e um desenvolvimento de uma doença psicossomática, onde o paciente tem total certeza de que contêm a enfermidade apontada.
-O objetivo deste, é explorar a relação de sintomas e doenças, lançando mão de um estudo estatístico, baseado na frequência em que se relacionam, ainda, cruzando essas informações com o perfil do paciente, para que o diagnóstico seja o mais assertivo possível, e não alarmante sem necessidade... ainda que sempre lembraremos, um diagnóstico profissional é imprescindível.
+O objetivo deste, é explorar a relação de sintomas e doenças, lançando mão de um estudo estatístico, baseado na frequência em que se relacionam, ainda, cruzando essas informações com o perfil do paciente, para que o diagnóstico seja o mais assertivo possível, e não alarmante sem necessidade, ainda que sempre lembraremos, um diagnóstico profissional é imprescindível.
+
+\subsection{Opções similares}
+
+Tomou-se como referência de aplicação o Guia de Doenças e Sintomas \cite{AlbertEinstein}, tanto como possível base de dados a ser compilados, quanto em como forma de levar o questionário ao usuário.
+
+Apresentando informações completas, é uma excelente ferramenta para sua proposta.
+Por outro lado, também ilustra o cenário que desejamos evitar, quando o usuário recebe uma lista assustadora de doenças relacionadas ao seus sintomas, tais como câncer ou insuficiência renal, quando estão ligadas ao caso por poucos sintomas.
+
+\subsection{Realizações}
+
+A versão final de sistema apresentou resultado satisfatório para o proposto inicialmente, tendo pequenas alterações na interface visual em relação aos protótipos.
+
+Somente resultados com proporções relevantes de sintomas são apresentados para o usuário, garantindo assim que, em casos simples, o usuário não seja surpreendido com resultados de doenças graves, fazendo-o manter a calma.
