--- a/relatorio/sbc-template.bib
+++ b/relatorio/sbc-template.bib
@@ -39,3 +39,10 @@
   year={2011},
   publisher={Mcgraw-hill}
 }
+
+@MISC {leander,
+	author       = "{Lean der}",
+	title        = "Sytora",
+	howpublished = "gitHub",
+	url			 = "https://github.com/leanderme/sytora"
+}
