--- a/relatorio/images/diagrama_blocos.tex
+++ b/relatorio/images/diagrama_blocos.tex
@@ -5,19 +5,19 @@
 %uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
 
 %Flowchart: Magnetic Disk [id:dp16979524550945557] 
-\draw   (650,102.51) -- (650,186.12) .. controls (650,198.55) and (616.42,208.63) .. (575,208.63) .. controls (533.58,208.63) and (500,198.55) .. (500,186.12) -- (500,102.51)(650,102.51) .. controls (650,114.94) and (616.42,125.02) .. (575,125.02) .. controls (533.58,125.02) and (500,114.94) .. (500,102.51) .. controls (500,90.08) and (533.58,80) .. (575,80) .. controls (616.42,80) and (650,90.08) .. (650,102.51) -- cycle ;
+\draw (650,102.51) -- (650,186.12) .. controls (650,198.55) and (616.42,208.63) .. (575,208.63) .. controls (533.58,208.63) and (500,198.55) .. (500,186.12) -- (500,102.51)(650,102.51) .. controls (650,114.94) and (616.42,125.02) .. (575,125.02) .. controls (533.58,125.02) and (500,114.94) .. (500,102.51) .. controls (500,90.08) and (533.58,80) .. (575,80) .. controls (616.42,80) and (650,90.08) .. (650,102.51) -- cycle ;
 %Flowchart: Document [id:dp9586000142466773] 
-\draw   (21,82.04) -- (161,82.04) -- (161,188.16) .. controls (73.5,188.16) and (91,226.42) .. (21,201.66) -- cycle ;
+\draw (21,82.04) -- (161,82.04) -- (161,188.16) .. controls (73.5,188.16) and (91,226.42) .. (21,201.66) -- cycle ;
 %Flowchart: Process [id:dp6310623690046997] 
-\draw   (260,80) -- (400,80) -- (400,208.63) -- (260,208.63) -- cycle ;
+\draw (260,80) -- (400,80) -- (400,208.63) -- (260,208.63) -- cycle ;
 %Right Arrow [id:dp033275286474635735] 
-\draw   (161,91.53) -- (220.4,91.53) -- (220.4,82.04) -- (260,101.02) -- (220.4,120) -- (220.4,110.51) -- (161,110.51) -- cycle ;
+\draw [dashed] (161,91.53) -- (220.4,91.53) -- (220.4,82.04) -- (260,101.02) -- (220.4,120) -- (220.4,110.51) -- (161,110.51) -- cycle ;
 %Right Arrow [id:dp9102894989767911] 
-\draw   (400,90.94) -- (460,90.94) -- (460,80) -- (500,101.88) -- (460,123.76) -- (460,112.82) -- (400,112.82) -- cycle ;
+\draw (400,90.94) -- (460,90.94) -- (460,80) -- (500,101.88) -- (460,123.76) -- (460,112.82) -- (400,112.82) -- cycle ;
 %Left Arrow [id:dp6006547487955811] 
-\draw   (161,189) -- (200.6,169.38) -- (200.6,179.19) -- (260,179.19) -- (260,198.81) -- (200.6,198.81) -- (200.6,208.63) -- cycle ;
+\draw (161,189) -- (200.6,169.38) -- (200.6,179.19) -- (260,179.19) -- (260,198.81) -- (200.6,198.81) -- (200.6,208.63) -- cycle ;
 %Left Arrow [id:dp43669281204893773] 
-\draw   (400,190) -- (440,170) -- (440,180) -- (500,180) -- (500,200) -- (440,200) -- (440,210) -- cycle ;
+\draw [dashed] (400,190) -- (440,170) -- (440,180) -- (500,180) -- (500,200) -- (440,200) -- (440,210) -- cycle ;
 
 % Text Node
 \draw (91,92.54) node   [align=left] {\textbf{Views}};
